fixing missing docs and making delete more like a delete
