# inventory-svc/api-spec.yaml
@@ -15,7 +15,7 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
+        200:
           description: |-
             200 response
           examples:
@@ -53,12 +53,11 @@ paths:
                 type: string
               price:
                 type: number
-
       produces:
         - application/json
       responses:
         201:
-          description: Created User Object
+          description: Created Item
           schema:
             type: object
             properties:
@@ -72,38 +71,29 @@ paths:
                 type: number
                 description: Item price
 
-  /items/{name}:
-    get:
+    delete:
       tags:
-      - "item"
-      operationId: getItemsByName
-      summary: Retrieves all items with a matching name
-      parameters:
-      - in: path
-        name: name
-        required: true
-        type: string
-        description: The  name of the item
-      produces:
+       - "item"
+      operationId: deleteitem
+      summary: Deletes an item
+      consumes:
       - application/json
+      parameters:
+      - in: body
+        name: item
+        schema:
+          type: object
+          required:
+          - name
+          - id
+          properties:
+            name:
+              type: string
+            id:
+              type: integer
       responses:
-        "200":
-          description: |-
-            200 response
-          examples:
-            application/json: |-
-              [
-                {
-                  "name": "item1",
-                  "price": 1.11
-                  "id": 1
-                },
-                {
-                  "name": "item1",
-                  "price": 2.22
-                  "id": 2
-                }
-              ]
+        204:
+          description: Item Deleted
 
 host: 35.234.149.119/inventory
 schemes:
